2003-10-22  Vincent Untz  <vincent@vuntz.net>

	* backends/xml-dir.c (dir_load_doc): don't mark "%s" as translatable.
	Fix bug #84893.

2003-10-09  Ross Burton  <ross@burtonini.com>

	* doc/Makefile.am:
	* doc/gconftool-2.1:
	Added a basic man page.

2003-10-07  Žygimantas Beručka  <uid0@tuxfamily.org>

	* configure.in: Added "lt" to ALL_LINGUAS

2003-09-26  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf.c (gconf_engine_all_dirs): fix crash calling this
	with --direct (local source), the list contains strings not 
	GConfEntry

Wed Sep 10 15:23:17 2003  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: Rerelease 2.4.0.1 to fix glib-gettext problem.

2003-09-08  Havoc Pennington  <hp@redhat.com>

	* configure.in: 2.4.0

2003-09-05  Taneem Ahmed  <taneem@bengalinux.org>

	* configure.in: Added "bn" to ALL_LINGUAS.

2003-08-30  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added "sq" (Albanian) to ALL_LINGUAS.
	
2003-08-18  Muktha  <muktha.narayan@wipro.com>

	* gconf/gconftool.c (main) : Print usage message when no options are
	passed to gconftool-2. Fixes #70316.

2003-08-11  Christophe Fergeau  <teuf@gnome.org>

	* doc/gconf/tmpl/gconf-client.sgml:
	* doc/gconf/tmpl/gconf.sgml: Update API documentation (in particular
	the gconf_client doc). Fixes #89348.

2003-08-11  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gconf/gconf-client.c: (gconf_client_real_unreturned_error),
	(gconf_client_real_error), (cache_pairs_in_dir):
	* gconf/gconf-internals.c: (gconf_log):
	* gconf/gconf-listeners.c: (ltable_insert), (ltable_remove),
	(spew_func), (ltable_spew):
	* gconf/gconfd.c: (main):
	* gconf/gconftool.c: (main), (recurse_subdir_list),
	(do_recursive_list), (do_dump_values), (list_pairs_in_dir),
	(print_schema_in_xml), (print_pair_in_xml), (print_list_in_xml),
	(print_value_in_xml), (dump_entries_in_dir), (do_dir_exists),
	(do_spawn_daemon), (do_get), (read_value_type), (do_set),
	(do_get_type), (do_get_list_size), (do_get_list_element),