@@ -1,0 +1,3 @@
+per-homedir causes problems:
+ http://bugzilla.gnome.org/show_bug.cgi?id=84101
+
