@@ -1,3 +1,11 @@
+2003-10-22  Havoc Pennington  <hp@redhat.com>
+
+	* gconf/gconf-client.c: patch from Ray Strode to avoid breaking
+	the schema name cache, bug #94412
+
+	* doc/rationales.txt: add file to track bugzilla numbers to refer
+	to later
+
 2003-10-22  Vincent Untz  <vincent@vuntz.net>
 
 	* backends/xml-dir.c (dir_load_doc): don't mark "%s" as translatable.
